# bevy_pg

./: Cargo.toml
.cargo/: config.toml
assets/: boat.gltf  claw_machine_bevy.gltf  claw_machine_transparent.glb  claw_machine_transparent.gltf
assets/OSG_Scene/: OSG_Scene.gltf
assets/claw_machine/: scene.gltf
assets/mushroom/: scene.gltf
src/: fixed_timestep_test.rs  main.rs
