[package]
name = "bevy_pg"
version = "0.1.0"
authors = ["Stanislav Suzdalev <stasuz@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = {git = "https://github.com/bevyengine/bevy", rev = "6228e8a4bbdb966659f7dae1e87cf55e8318bde3" }
# bevy = { path = "../bevy"}
bevy = { version = "0.5.0", features = ["dynamic"] }

# Fast compile
[toolchain]
channel = "nightly"